Fix navbar wrapping and hide footer when no source or tags

--- a/booted/css/custom.less
+++ b/booted/css/custom.less
@@ -124,6 +124,8 @@ blockquote p {
     position:relative; 
     border-radius: 0px;
     min-width: 100%;
+    background-image: none;
+    box-shadow: 0px 10px 5px rgba(0,0,0,.8);
 }
 
 #wrapper {
